name:                gss
version:             0.1.0.0
synopsis:            Graph-structured stacks
-- description:
homepage:            https://github.com/ocramz/gss
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz
copyright:           2022 Marco Zocca
category:            Acme
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 9.0.2

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     GSS
  build-depends:       base >= 4.7 && < 5
                     , algebraic-graphs
                     , containers
                     , text
                     , transformers >= 0.5
                     -- debug
                     , hspec
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite spec
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       GSSSpec
  build-depends:       base
                     , containers
                     , gss
                     , hspec

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/ocramz/gss
